--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>Arts Fest Registration Portal - Complete Registration System</title>
+    <title>AFRP</title>
     <meta name="description" content="Comprehensive Arts Fest registration portal with two-step registration, program selection, image uploads, and report generation. Register for stage and non-stage programs with your team." />
     <meta property="og:title" content="Arts Fest Registration Portal" />
     <meta property="og:description" content="Register for Arts Fest programs with our comprehensive registration system. Choose from stage and non-stage programs, upload photos, and generate reports." />
